--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Change My View</title>
   </head>
   <body>
     <noscript>
@@ -46,7 +46,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-
+    <!-- loading up the service worker  -->
     <script>
         if('serviceWorker' in navigator){
           window.addEventListener('load',function(){
